@@ -63,6 +63,8 @@ Some of the LyX functions have changed names:
 - The functions LFUN_HTML_INSERT, "html-insert", LFUN_URL_INSERT, "url-insert" was
   superseded by LFUN_HYPERLINK_INSERT, "href-insert".
 
+- The functions LFUN_FLOAT_LIST has been renamed to LFUN_FLOAT_LIST_INSERT.
+
 The following new LyX functions have been introduced:
 
 - LFUN_SPECIALCHAR_INSERT, "specialchar-insert" (see above).
